--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,18 @@ body {
   /* place-items: center; */
 }
 
+#hero2 {
+  height: 30vh;
+  width: 100%;
+  z-index: 0;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 100%;
+  place-items: center;
+  background-image: repeating-linear-gradient(238deg, rgba(25, 208, 33, 0.1) 0px, rgba(25, 208, 33, 0.1) 1px, transparent 1px, transparent 13px), repeating-linear-gradient(328deg, rgba(25, 208, 33, 0.1) 0px, rgba(25, 208, 33, 0.1) 1px, transparent 1px, transparent 13px), linear-gradient(328deg, rgb(51, 68, 134), rgb(71, 224, 241));
+}
+
 #credit {
   color: #85A921;
   font-size: xx-small;
@@ -100,6 +112,14 @@ img {
   color: #777;
   height: auto;
   padding: 1rem 2rem;
+}
+
+.cform {
+  display: grid;
+  grid-template-columns: 1fr;
+  /* grid-template-rows: 100vh; */
+  place-items: center;
+  padding: 1em;
 }
 
 .card,
@@ -236,4 +256,59 @@ li {
 li {
   max-width: 50ch;
   padding-bottom: 1em;
+}
+
+
+/* BASIN CONTACT FORM */
+
+
+/* Style inputs with type="text", select elements and textareas */
+
+input[type=text],
+select,
+textarea {
+  width: 100%;
+  /* Full width */
+  padding: 12px;
+  /* Some padding */
+  border: 1px solid #ccc;
+  /* Gray border */
+  border-radius: 4px;
+  /* Rounded borders */
+  box-sizing: border-box;
+  /* Make sure that padding and width stays in place */
+  margin-top: 6px;
+  /* Add a top margin */
+  margin-bottom: 16px;
+  /* Bottom margin */
+  resize: vertical/* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+
+/* Style the submit button with a specific background color etc */
+
+button[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+
+/* When moving the mouse over the submit button, add a darker green color */
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+
+/* Add a background color and some padding around the form */
+
+.container {
+  border-radius: 5px;
+  /* background-color: #fff; */
+  padding: 20px;
+  max-width: 70vw;
 }
