--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ body {
   grid-template-columns: 1fr;
   grid-template-rows: 100%;
   place-items: center;
-  background-image: repeating-linear-gradient(238deg, rgba(25, 208, 33, 0.1) 0px, rgba(25, 208, 33, 0.1) 1px, transparent 1px, transparent 13px), repeating-linear-gradient(328deg, rgba(25, 208, 33, 0.1) 0px, rgba(25, 208, 33, 0.1) 1px, transparent 1px, transparent 13px), linear-gradient(328deg, rgb(51, 68, 134), rgb(71, 224, 241));
+  background-image: linear-gradient(163deg, rgb(217, 198, 252), rgb(82, 114, 237));
 }
 
 #credit {
@@ -311,4 +311,8 @@ input[type=submit]:hover {
   /* background-color: #fff; */
   padding: 20px;
   max-width: 70vw;
+}
+
+.container p {
+  max-width: 60ch;
 }
