Updated class in contact page.

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -39,8 +39,8 @@ body {
   background-size: cover;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
-  /* place-items: center; */
+  grid-template-rows: 100%;
+  place-items: center;
 }
 
 #credit {
@@ -158,7 +158,7 @@ hr {
   margin: 2em 0;
 }
 
-#legal {
+.legal {
   color: gray;
   font-size: small;
 }
