--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,17 @@ body {
   padding: 5px;
 }
 
+nav {
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.45);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  place-items: center;
+  -webkit-backdrop-filter: blur(8px);
+  backdrop-filter: blur(8px);
+}
+
 #hero {
   height: 80vh;
   width: 100%;
@@ -51,7 +62,7 @@ body {
   overflow: hidden;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 100%;
+  grid-template-rows: 50px 1fr;
   place-items: center;
   background-image: linear-gradient(163deg, rgb(217, 198, 252), rgb(82, 114, 237));
 }
