--- a/css/styles.css
+++ b/css/styles.css
@@ -19,17 +19,63 @@ html {
 
 body {
   background-color: #efefef;
-  color: #3c096c;
+  color: #777;
   display: grid;
   grid-template-columns: 1fr;
   place-items: center;
   margin-bottom: 4em;
 }
 
+a,
+ :visited {
+  color: #ee6c4d;
+  /* font-family: "Helvetica", sans-serif; */
+  text-decoration: none;
+  transition: all 0.1s ease-in-out;
+}
+
+a:hover {
+  color: #78290f;
+  transition: all 0.3s ease-in-out;
+}
+
+.navlink,
+.navlink:visited {
+  color: #000;
+}
+
 .highlight {
   background-color: #fee440;
   padding: 5px;
 }
+
+nav {
+  width: 100%;
+  height: 50px;
+  font-family: "Helvetica", sans-serif;
+  font-weight: 500;
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: center;
+  justify-items: flex-end;
+  padding-right: 15%;
+  /* Frosted glass effect, webkit only */
+  background-color: rgba(255, 255, 255, 0.85);
+}
+
+@supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
+  nav {
+    -webkit-backdrop-filter: blur(.5rem);
+    backdrop-filter: blur(.5rem);
+    background-color: rgba(255, 255, 255, 0.5);
+  }
+}
+
+
+/* 
+    end frosted glass effect
+    https://codepen.io/jsblaisdell/pen/PoPjLoP?editors=1100
+*/
 
 #hero {
   height: 80vh;
@@ -51,32 +97,33 @@ body {
   overflow: hidden;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 100%;
+  grid-template-rows: 50px 1fr;
   place-items: center;
   background-image: linear-gradient(163deg, rgb(217, 198, 252), rgb(82, 114, 237));
+  /* background: url(https://i.ibb.co/DtLP8z3/morning.jpg) no-repeat center -40px;
+  background-size: cover; */
 }
 
-#credit {
-  color: #85A921;
-  font-size: xx-small;
-  height: min-content;
-  width: max-content;
-  line-height: 1;
-  background: rgba(0, 0, 0, 0.6);
-  border-radius: 5px;
-  margin-left: 1em;
-}
-
-#credit a,
-a:visited {
-  color: #85A921;
+.credit a,
+.credit a:visited {
+  color: #b7b7a4;
   text-decoration: none;
-  border-bottom: 1px solid #85A921;
+  border-bottom: 1px solid #b7b7a4;
 }
 
-#credit span {
+.credit a:hover {
+  border-bottom: none;
+}
+
+.credit span {
   display: block;
   padding: 1em;
+}
+
+.legal {
+  color: #b7b7a4;
+  font-size: x-small;
+  text-align: center;
 }
 
 #main {
@@ -91,6 +138,7 @@ a:visited {
 }
 
 .card {
+  color: #3c096c;
   background: #fff;
   box-shadow: 0 0.9rem 1.5rem rgba(0, 0, 0, 0.15);
   margin-top: -70px;
@@ -109,7 +157,6 @@ img {
 }
 
 .content {
-  color: #777;
   height: auto;
   padding: 1rem 2rem;
 }
@@ -164,21 +211,8 @@ img {
 }
 
 .btn,
-btn:hover {
+.btn:hover {
   text-decoration: none;
-}
-
-a,
- :visited {
-  color: #48bfe3;
-  /* font-family: "Helvetica", sans-serif; */
-  text-decoration: none;
-  transition: all 0.1s ease-in-out;
-}
-
-a:hover {
-  color: #ee6c4d;
-  transition: all 0.3s ease-in-out;
 }
 
 hr {
@@ -186,12 +220,6 @@ hr {
   height: 1px;
   background-image: linear-gradient( to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
   margin: 2em 0;
-}
-
-.legal {
-  color: #b7b7a4;
-  font-size: small;
-  text-align: center;
 }
 
 
