--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,10 @@ nav {
   place-items: center;
 }
 
+.card p {
+  text-align: center;
+}
+
 .message {
   text-align: center;
   font-style: italic;
@@ -181,6 +185,9 @@ img {
     grid-gap: 1em;
     /* place-items: center; */
     padding: 1rem 2em;
+  }
+  .card p {
+    text-align: left;
   }
 }
 
