--- a/css/styles.css
+++ b/css/styles.css
@@ -50,17 +50,21 @@ a:hover {
 }
 
 nav {
-  width: 100%;
+  /* max-width: 10vw; */
+  width: 120px;
   height: 50px;
   font-family: "Helvetica", sans-serif;
   font-weight: 500;
   display: grid;
   grid-template-columns: 1fr;
-  align-items: center;
-  justify-items: flex-end;
-  padding-right: 15%;
+  place-items: center;
+  /* justify-items: center; */
   /* Frosted glass effect, webkit only */
   background-color: rgba(255, 255, 255, 0.85);
+  border-radius: 2em;
+  margin-top: 1.5em;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.25);
+  padding: 0 1em;
 }
 
 @supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
@@ -86,12 +90,12 @@ nav {
   background-size: cover;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 100%;
+  grid-template-rows: 50px 1fr;
   place-items: center;
 }
 
 #hero2 {
-  height: 30vh;
+  height: 35vh;
   width: 100%;
   z-index: 0;
   overflow: hidden;
