--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,6 @@ a:hover {
 }
 
 nav {
-  /* max-width: 10vw; */
   width: 120px;
   height: 50px;
   font-family: "Helvetica", sans-serif;
@@ -58,13 +57,12 @@ nav {
   display: grid;
   grid-template-columns: 1fr;
   place-items: center;
-  /* justify-items: center; */
-  /* Frosted glass effect, webkit only */
-  background-color: rgba(255, 255, 255, 0.85);
   border-radius: 2em;
   margin-top: 1.5em;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 10px 40px rgba(0, 0, 0, 0.55);
   padding: 0 1em;
+  /* Frosted glass effect, webkit only */
+  background-color: rgba(255, 255, 255, 0.85);
 }
 
 @supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
@@ -103,9 +101,11 @@ nav {
   grid-template-columns: 1fr;
   grid-template-rows: 50px 1fr;
   place-items: center;
-  background-image: linear-gradient(163deg, rgb(217, 198, 252), rgb(82, 114, 237));
+  /* background-image: linear-gradient(163deg, rgb(217, 198, 252), rgb(82, 114, 237)); */
   /* background: url(https://i.ibb.co/DtLP8z3/morning.jpg) no-repeat center -40px;
   background-size: cover; */
+  background: transparent url(../media/kunal-shinde--f0YLss50Bs-unsplash.jpg) no-repeat center -170px;
+  background-size: cover;
 }
 
 .credit a,
@@ -195,7 +195,8 @@ img {
   }
 }
 
-@media (hover: hover) {
+
+/* @media (hover: hover) {
   button {
     height: 45px;
     width: auto;
@@ -216,6 +217,20 @@ img {
     border: 1px solid #99d98c;
     color: #007f5f;
   }
+} */
+
+
+/* Make sure to add button href back in the html. */
+
+button {
+  height: 45px;
+  width: auto;
+  padding: 1em 3em;
+  margin: 1em .5em;
+  line-height: 0;
+  border: 1px solid #adb5bd;
+  background-color: #fff;
+  color: #adb5bd;
 }
 
 .btn,
