--- a/status.css
+++ b/status.css
@@ -39,6 +39,11 @@ blockquote {
   color: #777;
 }
 
+input[type=checkbox]:checked+label {
+  text-decoration: line-through;
+  color: #888;
+}
+
 
 /* 
 Font Clamp  
