--- a/status.css
+++ b/status.css
@@ -57,6 +57,7 @@ input[type=checkbox]:checked+label {
 
 /* 
   Table
+  https://codebeautify.org/html-table-generator
 */
 
 table {
@@ -67,8 +68,9 @@ table {
 }
 
 table th {
+  font-family: var(--hf01);
   border: 1px solid #b3adad;
-  padding: 5px;
+  padding: 1em;
   background: #f0f0f0;
   color: #313030;
   text-align: left;
@@ -84,7 +86,8 @@ table td {
 
 .total {
   /* background: #dfdfdf; */
-  font-weight: bold;
+  font-family: var(--hf01);
+  /* font-weight: bold; */
   border-top: 3px solid #b3adad;
 }
 
@@ -125,12 +128,13 @@ h2 {
 h3 {
   --fluid-type-min: 0.7rem;
   --fluid-type-max: 1.4rem;
+  text-transform: capitalize;
 }
 
 p,
 li {
   /* max-width: 60ch; */
-  line-height: 1.3;
+  line-height: 1.7;
   padding-bottom: 0.5em;
   font-family: var(--bfont01);
 }
