--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@ nav {
   width: 100%;
   z-index: 0;
   overflow: hidden;
-  background: transparent url(../media/kunal-shinde--f0YLss50Bs-unsplash.jpg) no-repeat top center;
+  background: transparent url(../media/yannis-h-uaPaEM7MiQQ-unsplash.jpg) no-repeat center bottom;
   background-size: cover;
   display: grid;
   grid-template-columns: 1fr;
