--- a/crowdfunding.css
+++ b/crowdfunding.css
@@ -26,7 +26,7 @@ body {
   width: 70vw;
   height: 100%;
   /* outline: 1px solid red; */
-  margin: 5em 1em 3em;
+  /* margin: 5em 1em 3em; */
 }
 
 #hero {
