--- a/css/styles.css
+++ b/css/styles.css
@@ -26,12 +26,6 @@ body {
   margin-bottom: 4em;
 }
 
-.e-mail:before {
-  content: attr(data-website) "\0040" attr(data-user);
-  unicode-bidi: bidi-override;
-  direction: rtl;
-}
-
 a,
  :visited {
   color: #ee6c4d;
@@ -69,11 +63,11 @@ nav {
 }
 
 @supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
-  nav {
+  /* nav {
     -webkit-backdrop-filter: blur(.5rem);
     backdrop-filter: blur(.5rem);
     background-color: rgba(255, 255, 255, 0.5);
-  }
+  } */
 }
 
 
