--- a/details.css
+++ b/details.css
@@ -180,7 +180,8 @@ td {
 }
 .button-13b {
     align-items: center;
-    background-color: #efefef;
+    background-color: rgba(255, 255, 255, 0.1); /* #efefef */
+    border: 1px solid #afafaf;
     border-radius: 7px;
     box-shadow:
         transparent 0 0 0 3px,
@@ -204,7 +205,6 @@ td {
         box-shadow 0.2s,
         -webkit-box-shadow 0.2s;
     white-space: nowrap;
-    border: 0;
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
