--- a/details.css
+++ b/details.css
@@ -24,7 +24,20 @@ body {
     /* outline: 1px solid red; */
     margin: 5em 1em 3em;
 }
-
+#hero2 {
+  height: 35vh;
+  width: 100%;
+  z-index: 0;
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 50px 1fr;
+  place-items: center;
+  background: transparent url(../media/kunal-shinde--f0YLss50Bs-unsplash.jpg) no-repeat;
+  background-size: cover;
+  background-position: center center;
+  color: white;
+}
 .sans {
     list-style: none;
 }
@@ -178,7 +191,7 @@ td {
     -webkit-user-select: none;
     touch-action: manipulation;
 }
-.button-13b {
+.button-13b, .button-13c {
     align-items: center;
     background-color: rgba(255, 255, 255, 0.1); /* #efefef */
     border: 1px solid #afafaf;
@@ -210,7 +223,8 @@ td {
     touch-action: manipulation;
 }
 .button-13:hover,
-.button-13b:hover {
+.button-13b:hover,
+.button-13c:hover {
     box-shadow:
         #ff6b6b 0 0 0 1px,
         transparent 0 0 0 0;
