Added disbled style to the Donate button.

--- a/css/styles.css
+++ b/css/styles.css
@@ -253,6 +253,9 @@ img {
 .btn:hover {
   text-decoration: none;
 }
+.card > .btn > button:disabled {
+  cursor: not-allowed;
+}
 
 hr {
   border: 0;
