Added sunflowers image.

--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@ nav img {
   overflow: hidden;
   display: grid;
   place-items: center;
-  background: transparent url(../media/kunal-shinde--f0YLss50Bs-unsplash.jpg) no-repeat;
+  background: transparent url(../media/sunflowers.jpg) no-repeat;
   background-size: cover;
   background-position: center center;
 }
