--- a/css/details.css
+++ b/css/details.css
@@ -1,73 +1,6 @@
-@import url('../css/boska.css');
-@import url('../css/zodiak.css');
-@import url('../css/marasga.css');
+@import url("styles.css");
 
-:root {
-    --bgc: #e7e5e7;
-    --hf01: "Helvetica", sans-serif;
-    --bfont01: "Georgia", serif;
-}
 
-body,
-html {
-    width: 100%;
-    height: 100%;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    display: grid;
-    place-items: center;
-    background-color: var(--bgc);
-}
-
-.container {
-    width: 80vw;
-    height: 100%;
-    /* outline: 1px solid red; */
-    margin: 5em 1em 3em;
-}
-#hero2 {
-  height: 35vh;
-  width: 100%;
-  z-index: 0;
-  overflow: hidden;
-  display: grid;
-  place-items: center;
-  background: transparent url(../media/kunal-shinde--f0YLss50Bs-unsplash.jpg) no-repeat;
-  background-size: cover;
-  background-position: center center;
-  color: white;
-}
-.sans {
-    list-style: none;
-}
-
-.yellow {
-    background-color: yellow;
-}
-
-.red {
-    color: red;
-}
-
-blockquote {
-    border-left: 3px solid #d88d00;
-    padding-left: 1em;
-    color: #d88d00;
-    background-color: #efefef;
-    padding: 1em;
-}
-
-input[type="checkbox"]:checked + label {
-    text-decoration: line-through;
-    color: #888;
-}
-
-.rmv {
-    background-color: transparent;
-}
 
 /*
   Table
@@ -105,138 +38,3 @@ table td {
     border-top: 3px solid #b3adad;
 }
 
-/*
-Font Clamp
-https://piccalil.li/tutorial/fluid-typography-with-css-clamp/
-*/
-
-h1,
-h2,
-h3,
-p,
-li,
-blockquote,
-th,
-td {
-    font-size: clamp(
-        var(--fluid-type-min, 1rem),
-        calc(1rem + var(--fluid-type-target, 3vw)),
-        var(--fluid-type-max, 1.3rem)
-    );
-    max-width: 60ch;
-}
-
-h1,
-h2,
-h3 {
-    font-family: var(--hf01);
-}
-
-h1 {
-    --fluid-type-min: 1.5rem;
-    --fluid-type-max: 2.5rem;
-    --fluid-type-target: 5vw;
-    /* max-width: 30ch; */
-}
-#herocopy {
-  font-family: 'Zodiak-Black', serif;
-  --fluid-type-min: 2.3rem;
-  --fluid-type-max: 3rem;
-  --fluid-type-target: 5vw;
-  text-align: center;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75);
-  color: #fdfdfd;
-}
-
-h2 {
-    --fluid-type-min: 1rem;
-    --fluid-type-max: 1.8rem;
-}
-
-h3 {
-    --fluid-type-min: 0.7rem;
-    --fluid-type-max: 1.4rem;
-    text-transform: capitalize;
-}
-
-p,
-li,
-th,
-td {
-    /* max-width: 60ch; */
-    line-height: 1.7;
-    padding-bottom: 0.5em;
-    font-family: var(--bfont01);
-}
-
-/* CSS */
-
-/* .button-13, .button-13b, .button-13c {
-    align-items: center;
-    background-color: #fff;
-    border-radius: 7px;
-    box-shadow:
-        transparent 0 0 0 3px,
-        rgba(18, 18, 18, 0.1) 0 6px 20px;
-    box-sizing: border-box;
-    color: #121212;
-    cursor: pointer;
-    display: inline-flex;
-    flex: 1 1 auto;
-    font-family: Inter, sans-serif;
-    font-size: 1.2rem;
-    font-weight: 700;
-    justify-content: center;
-    line-height: 1;
-    margin: 1em 0;
-    outline: none;
-    padding: 1rem 1.2rem;
-    text-align: center;
-    text-decoration: none;
-    transition:
-        box-shadow 0.2s,
-        -webkit-box-shadow 0.2s;
-    white-space: nowrap;
-    border: 0;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-} */
-.button-13, .button-13b, .button-13c {
-    align-items: center;
-    background-color: rgba(255, 255, 255, 0.1); /* #efefef */
-    border: 1px solid #afafaf;
-    border-radius: 7px;
-    box-shadow:
-        transparent 0 0 0 3px,
-        rgba(18, 18, 18, 0.1) 0 6px 20px;
-    box-sizing: border-box;
-    color: #121212;
-    cursor: pointer;
-    display: inline-flex;
-    flex: 1 1 auto;
-    font-family: Inter, sans-serif;
-    font-size: 1.2rem;
-    font-weight: 700;
-    justify-content: center;
-    line-height: 1;
-    margin: 1em 0;
-    outline: none;
-    padding: 1rem 1.2rem;
-    text-align: center;
-    text-decoration: none;
-    transition:
-        box-shadow 0.2s,
-        -webkit-box-shadow 0.2s;
-    white-space: nowrap;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-}
-.button-13:hover,
-.button-13b:hover,
-.button-13c:hover {
-    box-shadow:
-        #ff6b6b 0 0 0 1px,
-        transparent 0 0 0 0;
-}
