--- a/css/details-clean.css
+++ b/css/details-clean.css
@@ -1,21 +1,13 @@
+
 @import url("styles.css");
+
 /* Global Resets and Base Styles */
-body,
-html {
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	padding: 0;
-	display: grid;
-	place-items: center;
-	background-color: var(--bgc);
-}
+
 
 /* Container Styles */
 .container {
-	width: 80vw;
-	height: 100%;
-	margin: 5em 1em 3em;
+  /* border-radius: 5px; */
+  max-width: 85vw;
 }
 
 /* Section: Hero */
@@ -61,7 +53,7 @@ td {
 h1,
 h2,
 h3 {
-	font-family: var(--hf01);
+	font-family: 'Zodiak-Black', serif;
 }
 
 h1 {
