--- a/css/details-clean.css
+++ b/css/details-clean.css
@@ -1,4 +1,3 @@
-
 @import url("styles.css");
 
 /* Global Resets and Base Styles */
@@ -6,13 +5,18 @@
 
 /* Container Styles */
 .container {
-  /* border-radius: 5px; */
-  max-width: 85vw;
+	max-width: 85vw;
 }
+
+/* .content {
+	display: grid;
+	grid-template-columns: 1fr;
+	place-items: center;
+} */
 
 /* Section: Hero */
 #hero3 {
-	height: 35vh;
+	height: 3`5vh;
 	width: 100%;
 	z-index: 0;
 	overflow: hidden;
@@ -30,6 +34,11 @@
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.75);
 	color: #fdfdfd;
 	font-size: clamp(2.3rem, 5vw, 3rem);
+}
+
+.footer {
+	display: grid;
+	place-items: center;
 }
 
 /* Typography - Font Clamp
@@ -82,15 +91,6 @@ h3 {
 	color: red;
 }
 
-/* Blockquote */
-blockquote {
-	border-left: 3px solid #d88d00;
-	padding-left: 1em;
-	color: #d88d00;
-	background-color: #efefef;
-	padding: 1em;
-}
-
 /* Tables - https://codebeautify.org/html-table-generator */
 table {
 	border: 1px solid #b3adad;
@@ -119,16 +119,14 @@ table td {
 }
 
 /* Miscellaneous */
-.rmv {
-	background-color: transparent;
-}
-
-input[type="checkbox"]:checked + label {
+input[type="checkbox"]:checked+label {
 	text-decoration: line-through;
 	color: #888;
 }
-
-.footer {
-  display: grid;
-  place-items: center;
+blockquote {
+	border-left: 3px solid #d88d00;
+	padding-left: 1em;
+	color: #d88d00;
+	background-color: #efefef;
+	padding: 1em;
 }
